dfir_rs/tests/compile-fail-stable/surface_partition_port_elided.stderr
error: Output ports from `partition` cannot be blank, must be named or indexed.
  --> tests/compile-fail-stable/surface_partition_port_elided.rs:14:9
   |
14 |         my_partition -> for_each(std::mem::drop);
   |         ^^^^^^^^^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_partition_port_elided.rs:16:8
   |
16 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
